server overhaul, change services depenedency and models